menu area update

--- a/Simple_dark_with_menu2.html
+++ b/Simple_dark_with_menu2.html
@@ -27,9 +27,7 @@
                                 @click="open = !open"
                                 aria-expanded="false"
                                 x-bind:aria-expanded="open.toString()">
-                            <span class="sr-only">Open main
-
-                            </span>
+                            <span class="sr-only">Open main menu</span>
                             <svg
                                  x-description="Icon when menu is closed. Heroicon name: outline/menu"
                                  x-state:on="Menu open"
@@ -50,15 +48,45 @@
                             <img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-500-mark-white-text.svg" alt="Workflow">
                         </div>
                         <div class="hidden sm:block sm:ml-6">
-                            <div class="flex space-x-4">
+                            <div
+                                 x-data="{currentPage: 'Team'}"
+                                 class="flex space-x-4">
                                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                                <a href="#" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Dashboard</a>
+                                <a
+                                   href="#"
+                                   x-bind:class="{
+                                       'bg-gray-900 text-white ': currentPage == 'Dash board',
+                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Dash board',
+                                    }"
+                                   x-on:click="currentPage = 'Dash board'"
+                                   class="px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
 
-                                <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Team</a>
+                                <a
+                                   href="#"
+                                   x-bind:class="{
+                                        'bg-gray-900 text-white ': currentPage == 'Team',
+                                        'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Team',
+                                    }"
+                                   x-on:click="currentPage = 'Team'"
+                                   class="px-3 py-2 rounded-md text-sm font-medium">Team</a>
 
-                                <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Projects</a>
+                                <a
+                                   href="#"
+                                   x-bind:class="{
+                                       'bg-gray-900 text-white ': currentPage == 'Projects',
+                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Projects',
+                                    }"
+                                   x-on:click="currentPage = 'Projects'"
+                                   class="px-3 py-2 rounded-md text-sm font-medium">Projects</a>
 
-                                <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Calendar</a>
+                                <a
+                                   href="#"
+                                   x-bind:class="{
+                                       'bg-gray-900 text-white ': currentPage == 'Calenda',
+                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Calenda',
+                                    }"
+                                   x-on:click="currentPage = 'Calenda'"
+                                   class="px-3 py-2 rounded-md text-sm font-medium">Calenda</a>
                             </div>
                         </div>
                     </div>
