--- a/Simple_dark_with_menu2.html
+++ b/Simple_dark_with_menu2.html
@@ -14,7 +14,12 @@
 
         <!-- This example requires Tailwind CSS v2.0+ -->
         <nav
-             x-data="{ open: false }"
+             x-data="{ 
+                 mobileMenuOpen: false,
+                 currentPage: 'Team',
+                 profileOpen: false
+             }"
+
              class="bg-gray-800">
             <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
                 <div class="relative flex items-center justify-between h-16">
@@ -24,20 +29,20 @@
                                 type="button"
                                 class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                                 aria-controls="mobile-menu"
-                                @click="open = !open"
+                                @click="mobileMenuOpen = !mobileMenuOpen"
                                 aria-expanded="false"
-                                x-bind:aria-expanded="open.toString()">
+                                x-bind:aria-expanded="mobileMenuOpen.toString()">
                             <span class="sr-only">Open main menu</span>
                             <svg
                                  x-description="Icon when menu is closed. Heroicon name: outline/menu"
                                  x-state:on="Menu open"
                                  x-state:off="Menu closed"
                                  class="block h-6 w-6"
-                                 :class="{ 'hidden': open, 'block': !(open) }"
+                                 :class="{ 'hidden': mobileMenuOpen, 'block': !(mobileMenuOpen) }"
                                  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                             </svg>
-                            <svg x-description="Icon when menu is open. Heroicon name: outline/x" x-state:on="Menu open" x-state:off="Menu closed" class="hidden h-6 w-6" :class="{ 'block': open, 'hidden': !(open) }" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <svg x-description="Icon when menu is open. Heroicon name: outline/x" x-state:on="Menu open" x-state:off="Menu closed" class="hidden h-6 w-6" :class="{ 'block': mobileMenuOpen, 'hidden': !(mobileMenuOpen) }" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
                         </button>
@@ -48,15 +53,13 @@
                             <img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-500-mark-white-text.svg" alt="Workflow">
                         </div>
                         <div class="hidden sm:block sm:ml-6">
-                            <div
-                                 x-data="{currentPage: 'Team'}"
-                                 class="flex space-x-4">
+                            <div class="flex space-x-4">
                                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                                 <a
                                    href="#"
                                    x-bind:class="{
                                        'bg-gray-900 text-white ': currentPage == 'Dash board',
-                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Dash board',
+                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Dash board'
                                     }"
                                    x-on:click="currentPage = 'Dash board'"
                                    class="px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
@@ -65,7 +68,7 @@
                                    href="#"
                                    x-bind:class="{
                                         'bg-gray-900 text-white ': currentPage == 'Team',
-                                        'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Team',
+                                        'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Team'
                                     }"
                                    x-on:click="currentPage = 'Team'"
                                    class="px-3 py-2 rounded-md text-sm font-medium">Team</a>
@@ -74,7 +77,7 @@
                                    href="#"
                                    x-bind:class="{
                                        'bg-gray-900 text-white ': currentPage == 'Projects',
-                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Projects',
+                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Projects'
                                     }"
                                    x-on:click="currentPage = 'Projects'"
                                    class="px-3 py-2 rounded-md text-sm font-medium">Projects</a>
@@ -83,7 +86,7 @@
                                    href="#"
                                    x-bind:class="{
                                        'bg-gray-900 text-white ': currentPage == 'Calenda',
-                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Calenda',
+                                       'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Calenda'
                                     }"
                                    x-on:click="currentPage = 'Calenda'"
                                    class="px-3 py-2 rounded-md text-sm font-medium">Calenda</a>
@@ -131,7 +134,10 @@
             </div>
 
             <!-- Mobile menu, show/hide based on menu state. -->
-            <div class="sm:hidden" id="mobile-menu">
+            <div
+                 class="sm:hidden"
+                 id="mobile-menu"
+                 x-show="mobileMenuOpen">
                 <div class="px-2 pt-2 pb-3 space-y-1">
                     <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                     <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
