--- a/tehon.html
+++ b/tehon.html
@@ -67,15 +67,33 @@
                             </button>
 
                             <!-- Profile dropdown -->
-                            <div x-data="{ open: false }" @keydown.escape.stop="open = false; focusButton()" @click.away="onClickAway($event)" class="ml-3 relative">
+                            <div
+                                 x-data="{ open: false }"
+                                 @keydown.escape.stop="open = false; focusButton()"
+                                 @click.away="onClickAway($event)"
+                                 class="ml-3 relative">
                                 <div>
-                                    <button type="button" class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu-button" x-ref="button" @click="onButtonClick()" @keyup.space.prevent="onButtonEnter()" @keydown.enter.prevent="onButtonEnter()" aria-expanded="false" aria-haspopup="true" x-bind:aria-expanded="open.toString()" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()">
+                                    <button
+                                            type="button"
+                                            class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
+                                            id="user-menu-button"
+                                            x-ref="button"
+                                            @click="onButtonClick()"
+                                            @keyup.space.prevent="onButtonEnter()"
+                                            @keydown.enter.prevent="onButtonEnter()"
+                                            aria-expanded="false"
+                                            aria-haspopup="true"
+                                            x-bind:aria-expanded="open.toString()"
+                                            @keydown.arrow-up.prevent="onArrowUp()"
+                                            @keydown.arrow-down.prevent="onArrowDown()">
                                         <span class="sr-only">Open user menu</span>
                                         <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                                     </button>
                                 </div>
 
-                                <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100"
+                                <div
+                                     x-show="open"
+                                     x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100"
                                      x-transition:leave="transition ease-in duration-75"
                                      x-transition:leave-start="transform opacity-100 scale-100"
                                      x-transition:leave-end="transform opacity-0 scale-95" class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" x-ref="menu-items"
