--- a/Simple_dark_with_menu2.html
+++ b/Simple_dark_with_menu2.html
@@ -147,9 +147,9 @@
                                  aria-labelledby="user-menu-button"
                                  tabindex="-1">
                                 <!-- Active: "bg-gray-100", Not Active: "" -->
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-0" @click="open = false">Your Profile</a>
+                                <a href=" #" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-1" @click="open = false">Settings</a>
+                                <a href=" #" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2" @click="open = false">Sign out</a>
                             </div>
                         </div>
                     </div>
@@ -158,14 +158,29 @@
 
             <!-- Mobile menu, show/hide based on menu state. -->
             <div
-                 class="sm:hidden"
+                 class=" sm:hidden"
                  id="mobile-menu"
                  x-show="mobileMenuOpen">
                 <div class="px-2 pt-2 pb-3 space-y-1">
                     <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                    <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
+                    <a
+                       href="#"
+                       class="block px-3 py-2 rounded-md text-base font-medium"
+                       x-bind:class="{
+                        'bg-gray-900 text-white ': currentPage == 'Dash board',
+                        'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Dash board'
+                       }"
+                       x-on:click="currentPage = 'Dash board'"
+                       aria-current="page">Dashboard</a>
 
-                    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
+                    <a
+                       href="#"
+                       class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+                       x-bind:class="{
+                        'bg-gray-900 text-white ': currentPage == 'Team',
+                        'text-gray-300 hover:bg-gray-700 hover:text-white ': currentPage != 'Team'
+                       }"
+                       x-on:click="currentPage = 'Team'">Team</a>
 
                     <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
 
