--- a/Simple_dark_with_menu2.html
+++ b/Simple_dark_with_menu2.html
@@ -147,9 +147,9 @@
                                  aria-labelledby="user-menu-button"
                                  tabindex="-1">
                                 <!-- Active: "bg-gray-100", Not Active: "" -->
-                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-0" @click="open = false">Your Profile</a>
-                                <a href=" #" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-1" @click="open = false">Settings</a>
-                                <a href=" #" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2" @click="open = false">Sign out</a>
+                                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-0" @click="profileOpen= false">Your Profile</a>
+                                <a href=" #" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-1" @click="profileOpen= false">Settings</a>
+                                <a href=" #" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2" @click="profileOpen= false">Sign out</a>
                             </div>
                         </div>
                     </div>
