--- a/With_featured_categories copy.html
+++ b/With_featured_categories copy.html
@@ -15,15 +15,42 @@
             <div class="bg-gray-100 h-screen" style="min-height: 768px;">
 
 
-                <div x-data="{ open: true }" @keydown.window.escape="open = false" x-init="$watch(&quot;open&quot;, o => !o && window.setTimeout(() => (open = true), 1000))" x-show="open" class="fixed inset-0 overflow-hidden" aria-labelledby="slide-over-title" x-ref="dialog" aria-modal="true">
+                <div
+                     x-data="{ open: true }"
+                     @keydown.window.escape="open = false"
+                     x-init="$watch(&quot;open&quot;, o => !o && window.setTimeout(() => (open = true), 1000))"
+                     x-show="open"
+                     class="fixed inset-0 overflow-hidden"
+                     aria-labelledby="slide-over-title"
+                     x-ref="dialog"
+                     aria-modal="true">
                     <div class="absolute inset-0 overflow-hidden">
 
-                        <div x-show="open" x-transition:enter="ease-in-out duration-500" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="ease-in-out duration-500" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="Background overlay, show/hide based on slide-over state." class="absolute inset-0 bg-gray-500 bg-opacity-75 transition-opacity" @click="open = false" aria-hidden="true">
+                        <div x-show="open"
+                             x-transition:enter="ease-in-out duration-500"
+                             x-transition:enter-start="opacity-0"
+                             x-transition:enter-end="opacity-100"
+                             x-transition:leave="ease-in-out duration-500"
+                             x-transition:leave-start="opacity-100"
+                             x-transition:leave-end="opacity-0"
+                             x-description="Background overlay, show/hide based on slide-over state."
+                             class="absolute inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
+                             @click="open = false"
+                             aria-hidden="true">
                         </div>
 
                         <div class="fixed inset-y-0 right-0 pl-10 max-w-full flex">
 
-                            <div x-show="open" x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700" x-transition:enter-start="translate-x-full" x-transition:enter-end="translate-x-0" x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700" x-transition:leave-start="translate-x-0" x-transition:leave-end="translate-x-full" class="w-screen max-w-md" x-description="Slide-over panel, show/hide based on slide-over state.">
+                            <div
+                                 x-show="open"
+                                 x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700"
+                                 x-transition:enter-start="translate-x-full"
+                                 x-transition:enter-end="translate-x-0"
+                                 x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700"
+                                 x-transition:leave-start="translate-x-0"
+                                 x-transition:leave-end="translate-x-full"
+                                 class="w-screen max-w-md"
+                                 x-description="Slide-over panel, show/hide based on slide-over state.">
                                 <div class="h-full flex flex-col bg-white shadow-xl overflow-y-scroll">
                                     <div class="flex-1 py-6 overflow-y-auto px-4 sm:px-6">
                                         <div class="flex items-start justify-between">
@@ -31,7 +58,10 @@
                                                 Shopping cart
                                             </h2>
                                             <div class="ml-3 h-7 flex items-center">
-                                                <button type="button" class="-m-2 p-2 text-gray-400 hover:text-gray-500" @click="open = false">
+                                                <button
+                                                        type="button"
+                                                        class="-m-2 p-2 text-gray-400 hover:text-gray-500"
+                                                        @click="open = false">
                                                     <span class="sr-only">Close panel</span>
                                                     <svg class="h-6 w-6" x-description="Heroicon name: outline/x" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
