--- a/With_featured_categories copy.html
+++ b/With_featured_categories copy.html
@@ -189,7 +189,9 @@
                                         </div>
                                         <div class="mt-6 flex justify-center text-sm text-center text-gray-500">
                                             <p>
-                                                or <button type="button" class="text-indigo-600 font-medium hover:text-indigo-500" @click="open = false">Continue Shopping<span aria-hidden="true"> &rarr;</span></button>
+                                                or <button
+                                                        type="button"
+                                                        class="text-indigo-600 font-medium hover:text-indigo-500" @click="open = false">Continue Shopping<span aria-hidden="true"> &rarr;</span></button>
                                             </p>
                                         </div>
                                     </div>
